@@ -1,2 +1,12 @@
 Arcade game based on jbox2d physic engine.
 Tech Stack: spring boot, java, JavaFX
+
+For build project:
+1. Download OpenFX 11   (https://gluonhq.com/products/javafx/)
+2. Build 'industrial-jorney' from pom.xml
+3. Add to VM Options  d:\Java\javafx-sdk-11.0.2\lib\ --add-modules javafx.controls,javafx.fxml    
+   //replace d:\Java\javafx-sdk-11.0.2\lib\   with your path
+4.  Run PlayableMain.java
+...
+...
+Have Fun
